installer build with moditect linker and jpackage builder works